# mod_livetranslate

./: .gitignore  Dockerfile  Makefile  Makefile.am  README.md  build_module.sh  mod_livetranslate.c  mod_livetranslate.h  ws_client.c  ws_client.h
.github/workflows/: ci.yml  release.yml
claudedocs/: security_audit_report.md
